[tool.poetry]
name = "pychess"
version = "0.1.0"
description = ""
authors = ["kyle <oliverke@mail.uc.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
